2002-12-08  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* ChangeLog :

	  - Changelog started.

	* docs/bnf.txt :

	  - Added constraint statements.

	  - Improvements over old design. First/last parts and other stmt
	    rules no longer needed.